<?xml version="1.0"?>
<package format="2">
  <name>catkin_pip</name>
  <version>0.1.6</version>
  <description>
    Catkin macros to allow using pure python packages in usual catkin workspaces with normal python workflow.
  </description>

  <maintainer email="asmodehn@gmail.com">AlexV</maintainer>

  <license>BSD</license>

  <url type="website">http://github.com/asmodehn/catkin_pip</url>
  <url type="repository">https://github.com/asmodehn/catkin_pip</url>
  <url type="bugtracker">https://github.com/asmodehn/catkin_pip/issues</url>

  <buildtool_depend>catkin</buildtool_depend>

  <depend version_gte="2.7.5">python</depend>
  <depend version_gte="1.5.4">python-pip</depend>

  <test_depend version_gte="1.9.1">git</test_depend>
</package>
