<?xml version="1.0"?>
<package format="2">
  <name>catkin_pip</name>
  <version>0.2.0</version>
  <description>
    Catkin macros to allow using pure python packages in usual catkin workspaces with normal python workflow.
  </description>

  <maintainer email="asmodehn@gmail.com">AlexV</maintainer>

  <license>BSD</license>

  <url type="website">http://github.com/asmodehn/catkin_pip</url>
  <url type="repository">https://github.com/asmodehn/catkin_pip</url>
  <url type="bugtracker">https://github.com/asmodehn/catkin_pip/issues</url>

  <buildtool_depend>catkin</buildtool_depend>

  <depend version_gte="2.7.5">python</depend>

  <!-- saucy 1.4.1 BROKEN + EOL => NOT SUPPORTED -->
  <!-- trusty 1.5.4-1ubuntu4 -->
  <!-- utopic 1.5.6-2 EOL => NOT SUPPORTED -->
  <!-- vivid 1.5.6-5ubuntu2 => NOT SUPPORTED -->
  <!-- wily 1.5.6-7ubuntu1.2 => NOT SUPPORTED -->
  <!-- xenial 8.1.1-2ubuntu0.2 -->
  <!-- yakkety 8.1.2-2 -->
  <!-- zesty 9.0.1-2 => currently BROKEN https://github.com/asmodehn/catkin_pip/issues/58 -->
  <depend version_gte="1.5.4">python-pip</depend>

  <test_depend version_gte="1.9.1">git</test_depend>
</package>
