<?xml version="1.0"?>
<package format="2">
   <name>mypippkg</name>
   <version>0.0.1</version>
   <description>
      A python package that can be installed with pip.
   </description>
   <maintainer email="asmodehn@gmail.com">AlexV</maintainer>
   <author>Will McGinnis</author>
   <license>BSD</license>
   <url type="repository">https://github.com/wdm0006/cookiecutter-pipproject.git</url>

   <buildtool_depend>catkin</buildtool_depend>
   <build_depend version_gte="0.1.2">catkin_pip</build_depend>

</package>


